# goldenrod

./: .gitignore  Cargo.toml  README.md
assets/shaders/: bvh_debug.wgsl  debug.wgsl  final.slang  final.wgsl  frame_vertex.wgsl  raytrace.wgsl
assets/shaders/bloom/: bloom_downsample.slang  bloom_downsample.wgsl  bloom_merge.slang  bloom_merge.wgsl  bloom_upsample.wgsl  bloom_upsample_first.wgsl
assets/shaders/lib/: bloom.slang  bloom.wgsl  header.slang  header.wgsl  noise.wgsl  space.wgsl
assets/shaders/lib/raytrace/: atmosphere.wgsl  bvh.wgsl  intersect.wgsl  spectrum.wgsl  stack.wgsl
assets/shaders/raytrace/: compute.wgsl
src/: main.rs
src/engine/: engine_state.rs  input.rs  mod.rs  profiler_state.rs  render_state.rs  renderer.rs  time.rs  ui.rs  window.rs
src/engine/render_state_ext/: binding.rs  buffer.rs  mod.rs  pass.rs  pipeline.rs  shader.rs  texture.rs  timestamp.rs
src/engine/render_state_ext/assets/: fallback.wgsl
src/renderer/: bloom.rs  buffers.rs  debug.rs  final_pass.rs  mod.rs  raytrace.rs  screen_quad.rs
src/renderer/buffer/: bvh.rs  mod.rs  object.rs  profiler.rs  screen.rs
src/state/: bvh.rs  camera.rs  material.rs  mod.rs  object.rs
src/util/: gltf.rs  mod.rs  preprocess.rs
